✨ Write project log as Markdown

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-/out/** linguist-documentation
+/Report/** linguist-documentation
 /Resources/** linguist-documentation
 /Links/** linguist-documentation
 /Explorations/*/coverage/** linguist-documentation
